--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-image: url("/bg.jpg");
+  background-image: url("https://images.pexels.com/photos/1103970/pexels-photo-1103970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
   display: flex;
   align-items: center;
   justify-content: center;
