--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -60,6 +60,9 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
 
         .message{
             max-width: 70%;
