--- a/src/components/list/userInfo/userInfo.css
+++ b/src/components/list/userInfo/userInfo.css
@@ -3,6 +3,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 
     .user{
         display: flex;
