--- a/src/components/list/chatList/chatList.css
+++ b/src/components/list/chatList/chatList.css
@@ -1,6 +1,10 @@
 .chatList {
     flex: 1;
     overflow: scroll;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    
     .search {
       display: flex;
       align-items: center;
